# career-bridge

./: API_INTEGRATION.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yaml  render.yaml  vercel.json
backend/: .dockerignore  .env.example  .gitignore  CORS_FIX.md  Cargo.toml  Dockerfile  NEXT_STEPS.md  POSTGRESQL_SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  SETUP_COMPLETE.md  api-tests.http  api_tests.http  docker-postgres.ps1  docker-postgres.sh  nixpacks.toml  railway.json  railway.toml  schema.sql  seed_data.sql  setup.ps1  setup.sh
backend/.sqlx/: query-07fcbfcb5856b0d364d8da710ae2c18027cdd50f73a3afaa7ca4d8b31c979bce.json  query-148bc6e2193fa74e5342d572b07b620e5d0a1c8de21da614ea78d342daee8f3b.json  query-152ab39fbe881308bb46c7508aa316c8160f6c7d973bed2e9d698d6080f0064a.json  query-1dfc9949da5a771e4d285d4194bbf8f25d39fbd0e591200b19c4d9dba1b3af05.json  query-1fdaa0c6f54312c10f283c05e2e7a56eedee310ed97c2b1f0a89266b8542532f.json  query-29ab6248eb7f275fefef623a4637ff677a3758caf17a7c50ac4194fcb69bc9ba.json  query-39ade400247f3cb16048b453e4a2f956e2cdfa245b8898f3f5130daefdd0e1e4.json  query-49860bb762ae08aa58e5e5ba2c6acc1aeec4aaa516ba61a769a869c24f7af583.json  query-49a9b8197c83d6522ec48ad0749d6e359346b8fc35c9bc4fb00b42b8eab1ad0d.json  query-574e20db212e7f91ee20e540e5f849724c7113dbd7a4c3e51b49cdc30503f132.json  query-6037c7bc33ba718b3aa9fe97cad8ff54e61ae71ed91f6d6c4166adcf8274e326.json  query-64e75ecc2e25d7dca94a852f335b72f2ddaa211d2ad101c9aed0cbff3a68c340.json  query-6c2aea858971df0fe2d3f2641d66b835a8f4a46d6fdc3fb63613e9b068c21c0d.json  (+14 more)
backend/src/: auth.rs  errors.rs  (+5 more)
(+81 files in other folders)
